--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "reselect": "^4.0.0",
     "typescript": "^4.1.2",
@@ -24,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "test": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2"
@@ -63,6 +65,9 @@
     "yarn": "^1.22.10"
   },
   "jest": {
-    "coveragePathIgnorePatterns": ["<rootDir>/src/index.tsx", "<rootDir>/src/reportWebVitals.ts"]
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/src/index.tsx",
+      "<rootDir>/src/reportWebVitals.ts"
+    ]
   }
 }
