--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "login-search",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "renatovalencia@gmail.com",
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
